Finalized the project

--- a/netflix-clone/src/Row.css
+++ b/netflix-clone/src/Row.css
@@ -1,4 +1,5 @@
 .row {
+  color: #fff;
   margin-left: 20px;
 }
 .row__posters {
@@ -13,6 +14,7 @@
 }
 
 .row__poster {
+  cursor: pointer;
   width: 100%;
   object-fit: contain;
   max-height: 100px;
